@@ -102,7 +102,7 @@
 /* Services systemd relies on */
 #define SPECIAL_DBUS_SERVICE "dbus.service"
 #define SPECIAL_DBUS_SOCKET "dbus.socket"
-#define SPECIAL_JOURNALD_SOCKET "systemd-journald.socket"
+#define SPECIAL_JOURNALD_SOCKET "journald.socket"
 #define SPECIAL_JOURNALD_SERVICE "systemd-journald.service"
 
 /* Magic init signals */
