@@ -9,8 +9,8 @@
 Description=Journal Service
 Documentation=man:systemd-journald.service(8) man:journald.conf(5)
 DefaultDependencies=no
-Requires=systemd-journald.socket
-After=systemd-journald.socket syslog.socket
+Requires=journald.socket
+After=journald.socket syslog.socket
 Before=sysinit.target
 
 [Service]
