@@ -10,6 +10,7 @@ systemd System and Service Manager
     - use name journal instead of systemd in journal.pc;
     - rename libsystemd-journal.sym to journal.sym;
     - use abi prefix JOURNAL instead of LIBSYSTEMD_JOURNAL in journal.sym;
+    - rename unit systemd-journald.socket to journald.socket;
  * remove systemd-journal-remote program;
  * remove systemd-journal-gatewayd program, service and socket;
  * remove gnutls support;
